adding service for produts and subscribe to it

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,7 +7,7 @@
         <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
           <h3 class="mb-3">Welcome To</h3>
           <h1 class="display-3 font-weight-bold mb-4">Products For You</h1>
-          <button class="btn btn-warning btn-lg">Show Products</button>
+          <button class="btn btn-warning btn-lg" [routerLink]="['/products']">Show Products</button>
         </div>
       </div>
     </div>
