--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,24 @@
-<p>products works!</p>
+<div class="container d-flex justify-content-center mt-50 mb-50">
+    <div class="row">
+      <div *ngFor="let product of products" class="col-md-4 mt-2">
+        <div class="card">
+          <div class="card-body">
+            <div class="card-img-actions">
+              <img [src]="product.image" class="card-img img-fluid" width="96" height="350" alt="{{ product.title }}">
+            </div>
+          </div>
+          <div class="card-body bg-light text-center">
+            <div class="mb-2">
+              <h6 class="font-weight-semibold mb-2">
+                <a href="#" class="text-default mb-2" data-abc="true">{{ product.title }}</a>
+              </h6>
+              <a href="#" class="text-muted" data-abc="true">{{ product.category.name }}</a>
+            </div>
+            <h3 class="mb-0 font-weight-semibold">${{ product.price.toFixed(2) }}</h3>
+            <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i>Show Details</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
