--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,80 +1,40 @@
-/* body {
-    margin: 0;
-    font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: .8125rem;
-    font-weight: 400;
-    line-height: 1.5385;
-    color: #333;
-    text-align: left;
+.card-img-actions {
+    height: 250px; /* Set a fixed height for the image container */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Hide any overflowed part of the image */
 }
 
-.mt-50{
-
-    margin-top: 50px;
+.card-img {
+    height: 100%;
+    width: auto; /* Ensure the image maintains its aspect ratio */
+    object-fit: cover; /* Ensure the image covers the area without distortion */
 }
-
-.mb-50{
-
-    margin-bottom: 50px;
-}
-
-
 
 .card {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .1875rem;
+    height: 100%; /* Ensures all cards have the same height */
 }
 
-.card-img-actions {
-    position: relative;
-}
 .card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    padding: 1.25rem;
+    background: linear-gradient(to right, rgb(29, 15, 6), rgb(88, 37, 17));
+    color: white; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.categoryName {
+    color: rgb(0, 0, 0);
+    margin-top: 10px;
+    background-color: rgb(204, 184, 0);
+    width: 100px;
+    height: 25px;
     text-align: center;
-}
-
-.card-img{
-
-    width: 350px;
-}
-
-.star{
-        color: red;
-}
-
-.bg-cart {
-    background-color:orange;
-    color:#fff;
-}
-
-.bg-cart:hover {
     
-    color:#fff;
 }
 
-.bg-buy {
-    background-color:green;
-    color:#fff;
-    padding-right: 29px;
+.btn {
+    background: linear-gradient(to right, rgb(252,132,46), rgb(114,53,31));
+    color: white;
 }
-.bg-buy:hover {
-    
-    color:#fff;
-}
-
-a{
-
-    text-decoration: none !important;
-} */
- 
