--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
-body {
-    background-color:rgb(91,89,94); 
+body,:root {
+    background: linear-gradient(to right, rgb(252,132,46), rgb(114,53,31)) !important;
     background-size: cover; 
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     color: white;
+    overflow-x:hidden !important ;
   }
   
