--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,11 @@
+<div class="container2">
+    <label for="sortSelect" class="form-label text-light">Sort by:</label>
+    <select id="sortSelect" (change)="onSortChange($event)" class="form-select">
+      <option value="price" selected>Price</option>
+      <option value="title">Title</option>
+      <option value="category">Category</option>
+    </select>
+  </div>
 <div class="container d-flex justify-content-center mt-50 mb-50">
     <div class="row">
         @for (product of this.products;track product.id){
