--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,6 +6,14 @@
       <option value="category">Category</option>
     </select>
   </div>
+  <div id="search">
+    <input type="search" name="q" aria-label="Search for inspiration" placeholder="Search..."/>
+</div>
+
+
+<div id="results">
+	
+</div>
 <div class="container d-flex justify-content-center mt-50 mb-50">
     <div class="row">
         @for (product of this.products;track product.id){
