connecting search functionality with search input

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -10,7 +10,7 @@
                 <p>{{ product.description }}</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>${{ product.price }}</small>
+                        <small>EGP{{ product.price }}</small>
                     </div>
                 </div>
             </div>
