--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -7,7 +7,7 @@
 }
 
 .product-card {
-    background-color: rgba(255, 255, 255, 0.096);
+    background: linear-gradient(to right, rgb(29, 15, 6), rgb(88, 37, 17));
     width: 700px;
     height: 400px;
     display: flex;
@@ -27,7 +27,7 @@
     height: 100%; 
     width: 300px; 
     border-radius: 5%;
-    border: 4px solid rgb(150, 83, 38);
+    border: 4px solid rgb(41,19,8);
 }
 
 .product-details {
@@ -47,13 +47,15 @@
 
 .product-category {
     font-size: 20px;
-    color: #5f5f5f;
+    color: #b46868;
     margin-bottom: 10px;
+    font-weight: bolder;
 }
 
 .product-details p {
     font-size: 16px;
     margin-bottom: 20px;
+    color: white;
 }
 
 
@@ -61,5 +63,7 @@
 .product-price {
     font-size: 25px;
     font-weight: bold;
+    color: white;
+
 }
 
