show name price and image of product only

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -18,9 +18,9 @@
 
                 <div class="card h-100">
                     <div class="card-body d-flex flex-column">
-                        <h6 class="categoryName">
+                        <!-- <h6 class="categoryName">
                             {{ product.category.name }}              
-                        </h6>
+                        </h6> -->
 
                         <div class="card-img-actions text-center">
                             <img 
